deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-deployment
  labels:
    app: chess-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chess-web 
  template:
    metadata:
      labels:
        app: chess-web
    spec:
      containers:
      - name: chess-web-container
        image: priyanshcchoudhary/chess-game:2024-04-15-10
        ports:
        - containerPort: 3000
