service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-web-service
  labels:
    app: chess-web
spec:
  type: NodePort
  selector:
    app: chess-web
  ports:
    - nodePort: 31479
      port: 8080
      targetPort: 3000
