policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-access
spec:
  podSelector:
    matchLabels:
      app: chess-web
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
